GS-10756 Reviews redesign follow-up: Design of verification email inline text on form - modified form layout to prevent any shifting when error and/or alert text appears.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -8266,7 +8266,8 @@ body.ie7 #frmPRModule .helperMessage {
     width: 155px;
 }
 
-#frmPRModule .formErrorText {
+#frmPRModule .form-error,
+#frmPRModule .form-alert{
     display: none;
 }
 
